# isle

./: Cargo.toml  plan.txt
geode/: Cargo.toml
geode/assets/: default_shader.wgsl
geode/src/: camera.rs  geometry.rs  lib.rs  lighting.rs  material.rs  plugin.rs  renderer.rs  texture.rs
geode/src/plugin/: components.rs  protocol.rs  systems.rs
isle_ecs/: Cargo.toml  expanded.rs
isle_ecs/macros/: Cargo.toml
isle_ecs/macros/src/: lib.rs
isle_ecs/src/: command.rs  component.rs  ecs.rs  entity.rs  executor.rs  lib.rs  plugin.rs  query.rs  schedule.rs  world.rs
isle_ecs/src/world/: event.rs
isle_editor/: Cargo.toml
isle_editor/src/: main.rs
isle_engine/: Cargo.toml
isle_engine/macros/: Cargo.toml
isle_engine/macros/src/: lib.rs
isle_engine/src/: asset.rs  components.rs  event.rs  executor.rs  flow.rs  input.rs  lib.rs  params.rs  plugin.rs  schedule.rs  window.rs  world.rs
isle_event/: Cargo.toml
isle_event/src/: lib.rs
isle_math/: Cargo.toml  build.rs
isle_math/src/: lib.rs  macros.rs  matrix.rs  rotation.rs  vector.rs
isle_math/src/vector/: d2.rs  d3.rs  d4.rs
src/: lib.rs
