[workspace]

members = [
    "isle_ecs",
    "isle_ecs/macros",
    "isle_engine",
    "isle_engine/macros",
    "isle_editor", "geode", "isle_math",
]

resolver = "2"

[package]
name = "isle"

[dependencies]
isle_ecs = { path = "isle_ecs" }
isle_engine = { path = "isle_engine" }

[features]
default = ["ecs"]
ecs = []
