[package]
name = "isle_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.14.2", features = ["raw"] }
isle_engine = { path= "../isle_engine" }
isle_ecs_macros = { path="./macros" }
