[package]
name = "isle_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isle = { path = "../" }
isle_math = { path = "../isle_math" }
isle_event = { path = "../isle_event" }
geode ={ path = "../geode" }
rand = "0.9.0"
